--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@tabby_ai/hijri-converter": "^1.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "hijri-date-converter": "^1.0.2",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
+    "moment-hijri": "^3.0.0",
     "next": "15.4.2",
     "react": "19.1.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-responsive": "^10.0.1",
     "react-youtube": "^10.1.0",
@@ -30,6 +36,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/moment-hijri": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
