--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
+    "@sentry/nextjs": "^10.15.0",
     "@tabby_ai/hijri-converter": "^1.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
